[gd_scene load_steps=4 format=3 uid="uid://mainmenu_ss"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_menu"]
[ext_resource type="Texture2D" path="res://assets/ui/logo_menu.png" id="2_logo"]
[ext_resource type="Texture2D" path="res://assets/ui/bg_menu.png" id="3_bg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3_bg")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -280.0
offset_right = 150.0
offset_bottom = 280.0
theme_override_constants/separation = 18

[node name="LogoTexture" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
texture = ExtResource("2_logo")
expand_mode = 1
stretch_mode = 5

[node name="ShoeLabel" type="Label" parent="VBoxContainer"]
theme_override_font_sizes/font_size = 15
text = "Gear: ðŸ¦¶ Barefoot"
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="VBoxContainer"]
theme_override_colors/font_color = Color(1, 0.85, 0, 1)
theme_override_font_sizes/font_size = 18
text = " 0"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="VBoxContainer"]
theme_override_font_sizes/font_size = 14
text = "0 / 25 levels completed"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
theme_override_font_sizes/font_size = 22
text = "PLAY"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
theme_override_font_sizes/font_size = 18
text = "SHOP"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
theme_override_font_sizes/font_size = 18
text = "SETTINGS"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 15
text = "HOW TO PLAY"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
theme_override_font_sizes/font_size = 13
text = "Reset Progress"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
theme_override_font_sizes/font_size = 13
text = "QUIT"

[node name="ControlsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -55.0
offset_right = 200.0
theme_override_colors/font_color = Color(1, 1, 1, 0.6)
theme_override_font_sizes/font_size = 12
text = "ðŸ‘† Tap to jump | ðŸ‘‡ Hold bottom to duck | ðŸ‘‰ Swipe to dash"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
